--- a/severe_weather_impacts.Rmd
+++ b/severe_weather_impacts.Rmd
@@ -11,9 +11,15 @@ _Insert Synopsis Here_: ... there should be a synopsis which describes and summa
 
 ...describes (in words and code) how the data were loaded into R and processed for analysis. In particular, your analysis must start from the raw CSV file containing the data. You cannot do any preprocessing outside the document. If preprocessing is time-consuming you may consider using the cache = TRUE option for certain code chunks.
 
+
+The data set can be found at https://d396qusza40orc.cloudfront.net/repdata%2Fdata%2FStormData.csv.bz2
+
+A description of the data can be found at https://d396qusza40orc.cloudfront.net/repdata%2Fpeer2_doc%2Fpd01016005curr.pdf
+
 Download and unpack the data
 
 ```{r cache=TRUE, message=FALSE}
+# We'll need the R.utils library to extract the data from a BZ2 file
 library(R.utils)
 
 # Download data file
@@ -30,6 +36,14 @@ if (!file.exists(dataFile)){
 }
 ```
 
+Inspect the uncompressed data file
+
+```{r}
+readLines("stormData.csv",n=6)
+```
+
+The data file is a comma-separated variables with quotes around text strings.  A header row names each of the columns.
+
 Load the uncompressed data into a data frame
 
 ```{r cache=TRUE, message=FALSE}
@@ -40,13 +54,85 @@ Inspect the data
 
 ```{r cache=TRUE, message=FALSE}
 str(data)
-summary(data)
-head(data, n=10)
+head(data, n=5)
+```
+
+### Population Health Data
+To address the first question, _Across the United States, which types of events (as indicated in the EVTYPE variable) are most harmful with respect to population health?_, we will need the variables EVTYPE, FATALITIES, and INJURIES.
+
+We can create a smaller dataset to focus on these data and then inspect it for quality issues
+
+```{r}
+popData <- data[, c("EVTYPE", "FATALITIES", "INJURIES")]
+str(popData)
+summary(popData)
+```
+
+There are no missing values in any variables.  The data types for each column are reasonable.
+
+###Property Damage Data
+
+To address the second question, _Across the United States, which types of events have the greatest economic consequences?_, we will need the variables EVTYPE, PROPDMG, PROPDMGEXP, CROPDMG, CROPDMGEXP to get data on property and crop damage.
+
+We can create a smaller dataset to focus on these data as well.
+
+```{r}
+propData <- data[, c("EVTYPE", "PROPDMG", "PROPDMGEXP", "CROPDMG", "CROPDMGEXP")]
+str(propData)
+summary(propData)
+```
+
+The numeric property damage and crop damage figures each have an exponent expressed in a separate character column.  This make the values not directly comparable or combinable.  Additionally some of the exponent values are not shown in the summary above.  We need to combine the numeric and exponent data into a single numeric value to allow our analysis.  There are no missing values to interfere with this transformation.
+
+```{r}
+summary(as.factor(propData$PROPDMGEXP))
+summary(as.factor(propData$CROPDMGEXP))
+```
+
+I could not locate a coding to explain these values, so some assumptions are necessary to create comparable values.  I will assume this mapping:
+
+* B,b are billions or 10^9
+* M,m are millions or 10^6
+* K,k are thousands or 10^3
+* H,h are hundreds or 10^2
+* Any numeric value, N is the exponent itself, e.g. 10^N
+* blank should be no exponent or 10^0
+* ? could be interpreted is missing data or that the coder did not understand the what an exponent was or what value to enter.  I will treat "?" as a missing value.
+* "-" and "+" will also be treated as missing data.
+
+Apply these assumptions and verify the gave the desired result
+
+```{r}
+# Make a map to replace the character values with the desired numeric exponents
+expChars <- c("B", "b", "M", "m", "K", "k", "H", "h", "", "?", "-", "+")
+expVals <- c(9, 9, 6, 6, 3, 3, 2, 2, 0, NA, NA, NA)
+expMap <- data.frame(expChars, expVals)
+
+# Apply the map to the Property Damage Exponent to replace non-numeric values
+propData$PROPDMGEXPRevised <-
+  unlist(lapply(as.character(propData$PROPDMGEXP),
+                function(x) { x <- ifelse(x %in% expMap$expChars, expMap$expVals[expMap$expChars == x], x) ; x}))
+
+# compare the input and output of the preceeding transformation
+summary(as.factor(propData$PROPDMGEXP))
+summary(as.factor(propData$PROPDMGEXPRevised))
+
+# Repeat this process for the crop data
+# Apply the map to the Crop Damage Exponent to replace non-numeric values
+propData$CROPDMGEXPRevised <-
+  unlist(lapply(as.character(propData$CROPDMGEXP),
+                function(x) { x <- ifelse(x %in% expMap$expChars, expMap$expVals[expMap$expChars == x], x) ; x}))
+
+# compare the input and output of the preceeding transformation
+summary(as.factor(propData$CROPDMGEXP))
+summary(as.factor(propData$CROPDMGEXPRevised))
+
+
 ```
 
 ##Results
 
-...in which your results are presented. 
+...in which your results are presented.
 
 The analysis document must have at least one figure containing a plot.
 
