--- a/severe_weather_impacts.Rmd
+++ b/severe_weather_impacts.Rmd
@@ -83,6 +83,18 @@ summary(popData)
 
 There are no missing values in any variables.  The data types for each column are reasonable.
 
+Population harm data has `r nrow(data %>% distinct(EVTYPE) %>% filter(FATALITIES + INJURIES <= 0)  %>% select(EVTYPE))` levels with no injuries or fatalities.
+
+```{r}
+nrow(data %>% distinct(EVTYPE) %>% filter(FATALITIES + INJURIES <= 0)  %>% select(EVTYPE))
+```
+
+These can be removed from our analysis of population harm as they account for no harm.
+
+```{r}
+events_with_nonzero_harm <- data %>% distinct(EVTYPE) %>% filter(FATALITIES + INJURIES > 0)  %>% select(EVTYPE)
+```
+
 ###Property Damage Data
 
 To address the second question, _Across the United States, which types of events have the greatest economic consequences?_, we will need the variables EVTYPE, PROPDMG, PROPDMGEXP, CROPDMG, CROPDMGEXP to get data on property and crop damage.
